2001-04-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleEnterNotify):
	a little event handling clean up

	* fvwm/events.h:
	EnterNotify and LeaveNotify are generated only for the decor_w and the
	client window

	* fvwm/placement.c (PlaceWindow):
	do not free window structure in placement code; fixes core dump

2001-04-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.c (FvwmErrorHandler):
	suppress error messages for X_ConfigureWindow requests

	* fvwm/events.c (HandleEnterNotify):
	make sure window under pointer gets the focus after a restart

2001-04-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Target.c (fvwmlib_get_target_window):
	* libs/Grab.c (MyXGrabKeyboard):
	(MyXUngrabKeyboard):
	* fvwm/placement.c (PlaceWindow):
	(PlaceWindow):
	* fvwm/move_resize.c (AnimatedMoveAnyWindow):
	(InteractiveMove):
	(CMD_Resize):
	(InteractiveMove):
	(AnimatedMoveAnyWindow):
	(CMD_Resize):
	* fvwm/functions.c (DeferExecution):
	* fvwm/builtins.c (CMD_StrokeFunc):
	* fvwm/menus.c (do_menu):
	new functions MyXGrabKeyboard and MyXUngrabKeyboard to handle multiple
	keyborad grabs
	fixes focus lost during menu animation

2001-04-19  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm2.1:
	corrected a spacing and contradicting info in FakeClick entry
	(it once suggested to use depth 1 and once depth 0 for the root)

2001-04-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (get_one_menu_position_argument):
	warning fixes

	* libs/Parse.c (GetSuffixedIntegerArguments):
	(SuffixToPercentValue):
	(GetTokenIndex):
	(GetNextTokenIndex):
	use pointers instead of arrays as function parameters to suppress some
	warnings

	* fvwm/functions.c (DeferExecution):
	grab keyboard when selecting a window to fix similar problem

	* fvwm/placement.c (PlaceWindow):
	wire frame placement fix w/ keyboard

2001-04-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (InteractiveMove):
	(CMD_Resize):